[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kserve_deployer"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A widget to deploy KServe InferenceServices from a notebook."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ipywidgets>=8.0.0",
    "kubernetes>=28.0.0",
    "ipython",
]

# This tells setuptools to look for package directories in the project root.
[tool.setuptools.packages.find]
where = ["."] 
include = ["kserve_deployer*"]